--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Shopping Website</title>
-        <link rel="stylesheet" type="text/css" href="C:\Users\Adit Vikram Mishra\Desktop\C++\.vscode\program 3\designHP.css">
+        <link rel="stylesheet" type="text/css" href="designHP.css">
     </head>
     <body>
         <div class="body">
