--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </div>
         <div class="second-section">
             <div class="second-section-video">
-                <video class="gojo-domain" width="600px" autoplay muted loop>
-                    <source src="C:\Users\Adit Vikram Mishra\Desktop\C++\.vscode\program 3\Gojo Satoru's Domain Expansion.mp4">
-                </video>
+                
+                    <img class="gojo-domain" src="https://c.tenor.com/aIvuHZ0RISMAAAAd/kimetsu-no-yaiba-demon-slayer.gif" style="width: 100%; max-width: 100%; height: auto;">
+                
             </div>
             <div class="second-section-text-box">
                 <div class="second-section-text">
