--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="fourth-section-box2-container">
                     <div class="fourth-section-box2">
                         <div class="fourth-section-box2-image">
-                            <img src="https://static.wikia.nocookie.net/onepunchman/images/7/79/Volume_21_Cover.png/revision/latest?cb=20210529233419" width="225" height="327">
+                            <img src="https://cdn.shopify.com/s/files/1/0882/5118/products/VIZ_MEDIA-One_Punch_Man_Vol_21_Manga-2456934_grande.jpg?v=1600974436" width="225" height="327">
                         </div>
                         <div class="second-section-text-btn-box">
                             <a href="#" class="second-section-text-btn">Read Now</a>
@@ -96,7 +96,7 @@
                     </div>
                     <div class="fourth-section-box2">
                         <div class="fourth-section-box2-image">
-                            <img src="https://static.wikia.nocookie.net/bokunoheroacademia/images/2/2f/Volume_2.png/revision/latest?cb=20180827090249" width="225" height="327">
+                            <img src="https://dwgkfo5b3odmw.cloudfront.net/manga/thumbs/thumb-86564-MyHeroAcademia_GN26_C1_Web-3-Wo-ILmENjECBydnOttrhOg.jpg" width="225" height="327">
     
                         </div>
                         <div class="second-section-text-btn-box">
@@ -123,7 +123,7 @@
                     </div>
                     <div class="fourth-section-box2">
                         <div class="fourth-section-box2-image">
-                            <img src="https://static.wikia.nocookie.net/kimetsu-no-yaiba/images/8/83/Kimetsu_no_Yaiba_V1.png/revision/latest?cb=20181206190730" width="225" height="327">
+                            <img src="https://dw9to29mmj727.cloudfront.net/products/1974723410.jpg" width="225" height="327">
     
                         </div>
                         <div class="second-section-text-btn-box">
